[#345] Create an api to validate the free code strategy
# New features and improvements

Add a api to validate the free code without saving on MongoDB.

# Bug fixes

On complete api remove a unnecessary input param

# Related issue

Closes #345
